src/tests/snapshots/hebi__tests__class_methods__class_call_init.snap
---
source: src/tests/class_methods.rs
expression: snapshot
---
# Modules:


# Input:
class A:
  v = 10
class B:
  fn init(self, *items):
    self.items = items
class C:
  fn init(self, **entries):
    self.entries = entries

print A().v
print B(0, 1, 2).items
print C(a=0, b=1, c=2).entries


# Result (success):
none

# Stdout:
10
[0, 1, 2]
{"a": 0, "b": 1, "c": 2}


