src/tests/snapshots/hebi__tests__class_methods__inherit_from_non_class.snap
---
source: src/tests/class_methods.rs
expression: snapshot
---
# Modules:


# Input:
test := 100
class Test(test):
  pass


# Result (error):
cannot inherit from `100` because it is not a class

# Stdout:


