src/tests/snapshots/hebi__tests__class_methods__method_receiver_resolution.snap
---
source: src/tests/class_methods.rs
expression: snapshot
---
# Modules:


# Input:
class A:
  v = 10
  fn test(self):
    print self.v


fn test():
  print "test"

class B:
  test = test

A().test() # params_base = 4 + implicit receiver
A.test(A()) # params_base = 3
test() # params_base = 4
B().test() # params_base = 4 + implicit receiver


# Result (success):
none

# Stdout:
10
10
test
test


